--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,41 +15,65 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="0dp"
-        app:layout_constraintHorizontal_bias="0.5"
+        android:layout_marginTop="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <view
-            android:id="@+id/random_selector_bar"
+            android:id="@+id/main_screen_random_selector_bar"
             class="org.adw.library.widgets.discreteseekbar.DiscreteSeekBar"
-            id="@+id/view"
-            android:layout_width="wrap_content"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            app:dsb_max="100dp"
-            app:dsb_min="1dp"
-            app:dsb_value="1dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="24dp"
+            app:dsb_indicatorColor="@android:color/holo_blue_dark"
+            app:dsb_max="50"
+            app:dsb_min="1"
+            app:dsb_progressColor="@android:color/holo_blue_light"
+            app:dsb_value="1"
+            app:layout_constraintHorizontal_bias="0.437"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textViewAmountOfNpcs"
+            android:id="@+id/main_screen_textViewAmountOfNpcs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="0dp"
             android:text="@string/main_screen_npcs_to_generate"
-            app:layout_constraintHorizontal_bias="0.505"
+            android:textAllCaps="false"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textColor="@color/colorBlueishGreen"
+            android:textSize="14sp"
+            app:layout_constraintHorizontal_bias="0.509"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            tools:layout_editor_absoluteY="46dp" />
+            app:layout_constraintTop_toBottomOf="@+id/main_screen_random_selector_bar" />
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/main_screen_generate_button"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="250dp"
+            android:layout_height="60dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/main_screen_generate_button_text"
+            app:backgroundTint="@android:color/holo_blue_dark"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/main_screen_textViewAmountOfNpcs" />
 
     </android.support.constraint.ConstraintLayout>
 
