--- a/app/src/main/res/layout/box_npcs.xml
+++ b/app/src/main/res/layout/box_npcs.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/box_npcs"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
 
@@ -22,7 +22,7 @@
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/layoutInformation"
-        android:layout_width="242dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
@@ -30,27 +30,29 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="7dp"
         android:maxWidth="250dp"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.018"
         app:layout_constraintLeft_toRightOf="@+id/npcImage"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/top_priority"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:ellipsize="start"
-            android:scrollHorizontally="true"
             android:text="DummyTextIsDummy"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textColor="@color/common_google_signin_btn_text_light_default"
             android:textSize="24sp"
             android:textStyle="bold"
             android:typeface="normal"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="HardcodedText" />
 
@@ -58,9 +60,6 @@
             android:id="@+id/linearLayout_high_highest_normal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="0dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="0dp"
             android:orientation="vertical"
             app:layout_constraintLeft_toLeftOf="@+id/top_priority"
             app:layout_constraintTop_toBottomOf="@+id/top_priority"></LinearLayout>
