Continuation of UI. Progress in NPC_BOX

--- a/app/src/main/res/layout/activity_generated_npcs.xml
+++ b/app/src/main/res/layout/activity_generated_npcs.xml
@@ -1,30 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:isScrollContainer="false"
-    tools:context="me.kerooker.rpgcharactergenerator.GeneratedNpcsActivity">
+    android:layout_height="match_parent">
 
-    <ScrollView
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/generated_main_constraint"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:isScrollContainer="true"
-        android:scrollbarStyle="insideOverlay"
-        android:scrollbars="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="wrap_content">
 
-        <android.support.constraint.ConstraintLayout
-            android:id="@+id/generated_main_constraint"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:isScrollContainer="false"
-            tools:context="me.kerooker.rpgcharactergenerator.GeneratedNpcsActivity">
-
-        </android.support.constraint.ConstraintLayout>
-    </ScrollView>
-</android.support.constraint.ConstraintLayout>
+    </android.support.constraint.ConstraintLayout>
+</ScrollView>
