--- a/app/src/main/res/layout/box_npcs.xml
+++ b/app/src/main/res/layout/box_npcs.xml
@@ -10,47 +10,44 @@
 
     <ImageView
         android:id="@+id/npcImage"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
+        android:layout_width="88dp"
+        android:layout_height="88dp"
+        android:layout_marginBottom="0dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="@+id/layoutInformation"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="@+id/layoutInformation"
-        app:srcCompat="@color/colorBlueishGreen" />
+        app:srcCompat="@drawable/camera" />
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/layoutInformation"
-        android:layout_width="250dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="7dp"
-        android:maxWidth="250dp"
-        app:layout_constraintHorizontal_bias="0.018"
+        android:layout_marginTop="8dp"
+        android:maxWidth="280dp"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/npcImage"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/top_priority"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="0dp"
             android:ellipsize="start"
             android:text="DummyTextIsDummy"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textColor="@color/common_google_signin_btn_text_light_default"
-            android:textSize="24sp"
+            android:textSize="22sp"
             android:textStyle="bold"
             android:typeface="normal"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
