--- a/app/src/main/res/layout/box_npcs.xml
+++ b/app/src/main/res/layout/box_npcs.xml
@@ -59,7 +59,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintLeft_toLeftOf="@+id/top_priority"
-            app:layout_constraintTop_toBottomOf="@+id/top_priority"></LinearLayout>
+            app:layout_constraintTop_toBottomOf="@+id/top_priority" />
     </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
