Added selector for Gender and Race to front screen (selected information)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,12 +33,14 @@
             app:dsb_min="1"
             app:dsb_progressColor="@android:color/holo_blue_light"
             app:dsb_value="1"
-            app:layout_constraintHorizontal_bias="0.437"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_constraintRight_creator="1"
-            tools:layout_constraintLeft_creator="1" />
+            tools:layout_constraintLeft_creator="1"
+            android:layout_marginLeft="0dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginRight="0dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintHorizontal_bias="0.0" />
 
         <TextView
             android:id="@+id/main_screen_textViewAmountOfNpcs"
@@ -60,19 +62,24 @@
             android:id="@+id/showAdvanced"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:text="@string/show_advanced_filters"
             android:textAllCaps="false"
             android:textColor="?android:attr/textColorLink"
-            app:layout_constraintLeft_toLeftOf="@+id/main_screen_textViewAmountOfNpcs"
-            app:layout_constraintRight_toRightOf="@+id/main_screen_textViewAmountOfNpcs"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/main_screen_textViewAmountOfNpcs" />
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/advancedContent"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:visibility="visible"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="0dp"
+            android:visibility="gone"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/showAdvanced"
@@ -82,7 +89,7 @@
             <TextView
                 android:id="@+id/gender_textfield"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="17dp"
                 android:layout_marginLeft="0dp"
                 android:text="@string/gender"
                 app:layout_constraintBottom_toBottomOf="@+id/gender_spinner"
@@ -108,7 +115,7 @@
                 android:id="@+id/race_text_field"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="0dp"
                 android:text="@string/race"
                 app:layout_constraintBottom_toBottomOf="@+id/race_spinner"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -122,7 +129,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
+                android:layout_marginLeft="0dp"
                 android:layout_marginRight="8dp"
+                android:layout_marginTop="0dp"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="@+id/gender_spinner"
                 app:layout_constraintRight_toRightOf="parent"
@@ -132,15 +141,13 @@
                 android:id="@+id/sub_race_text_field"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="0dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginBottom="0dp"
+                android:layout_marginLeft="8dp"
                 android:layout_marginTop="0dp"
                 android:text="@string/subrace"
+                android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="@+id/subrace_spinner"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toLeftOf="@+id/subrace_spinner"
+                app:layout_constraintLeft_toLeftOf="@+id/race_text_field"
                 app:layout_constraintTop_toTopOf="@+id/subrace_spinner"
                 app:layout_constraintVertical_bias="0.5" />
 
@@ -148,11 +155,12 @@
                 android:id="@+id/subrace_spinner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="0dp"
+                android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="0dp"
+                android:visibility="visible"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintLeft_toLeftOf="@+id/race_spinner"
+                app:layout_constraintLeft_toRightOf="@+id/sub_race_text_field"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/race_spinner" />
         </android.support.constraint.ConstraintLayout>
