Added selector for Gender and Race to front screen (selected information)

--- a/app/src/main/res/layout/box_npcs.xml
+++ b/app/src/main/res/layout/box_npcs.xml
@@ -14,7 +14,9 @@
         android:layout_height="88dp"
         android:layout_marginBottom="0dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:contentDescription="@string/npc_image"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="@+id/layoutInformation"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -38,7 +40,10 @@
             android:id="@+id/top_priority"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="0dp"
+            android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
+            android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"
             android:ellipsize="start"
             android:text="DummyTextIsDummy"
