--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,28 +19,28 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintLeft_creator="1">
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1">
 
         <view
             android:id="@+id/main_screen_random_selector_bar"
             class="org.adw.library.widgets.discreteseekbar.DiscreteSeekBar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
             android:layout_marginTop="24dp"
             app:dsb_indicatorColor="@android:color/holo_blue_dark"
             app:dsb_max="50"
             app:dsb_min="1"
             app:dsb_progressColor="@android:color/holo_blue_light"
             app:dsb_value="1"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintLeft_creator="1"
-            android:layout_marginLeft="0dp"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginRight="0dp"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintHorizontal_bias="0.0" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_constraintLeft_creator="1"
+            tools:layout_constraintRight_creator="1" />
 
         <TextView
             android:id="@+id/main_screen_textViewAmountOfNpcs"
@@ -55,29 +55,29 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/main_screen_random_selector_bar"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintLeft_creator="1" />
+            tools:layout_constraintLeft_creator="1"
+            tools:layout_constraintRight_creator="1" />
 
         <TextView
             android:id="@+id/showAdvanced"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
             android:text="@string/show_advanced_filters"
             android:textAllCaps="false"
             android:textColor="?android:attr/textColorLink"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="8dp"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/main_screen_textViewAmountOfNpcs" />
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/advancedContent"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="0dp"
             android:visibility="gone"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -91,6 +91,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="17dp"
                 android:layout_marginLeft="0dp"
+                android:layout_marginStart="0dp"
                 android:text="@string/gender"
                 app:layout_constraintBottom_toBottomOf="@+id/gender_spinner"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -131,6 +132,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginLeft="0dp"
                 android:layout_marginRight="8dp"
+                android:layout_marginStart="0dp"
                 android:layout_marginTop="0dp"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="@+id/gender_spinner"
@@ -143,13 +145,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="0dp"
                 android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="0dp"
                 android:text="@string/subrace"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="@+id/subrace_spinner"
                 app:layout_constraintLeft_toLeftOf="@+id/race_text_field"
                 app:layout_constraintTop_toTopOf="@+id/subrace_spinner"
-                app:layout_constraintVertical_bias="0.5" />
+                app:layout_constraintVertical_bias="0.5"
+                tools:ignore="RtlHardcoded" />
 
             <Spinner
                 android:id="@+id/subrace_spinner"
@@ -174,14 +178,14 @@
             android:layout_marginLeft="25dp"
             android:layout_marginRight="25dp"
             android:layout_marginStart="25dp"
+            android:layout_marginTop="9dp"
             android:text="@string/main_screen_generate_button_text"
             app:backgroundTint="@android:color/holo_blue_dark"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="9dp"
             app:layout_constraintTop_toBottomOf="@+id/advancedContent"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintLeft_creator="1" />
+            tools:layout_constraintLeft_creator="1"
+            tools:layout_constraintRight_creator="1" />
 
     </android.support.constraint.ConstraintLayout>
 
