Further development of Npc Activity

--- a/app/src/main/res/layout/activity_open_npc.xml
+++ b/app/src/main/res/layout/activity_open_npc.xml
@@ -73,16 +73,40 @@
             app:layout_constraintTop_toBottomOf="@+id/open_npc_image" />
 
         <LinearLayout
-            android:id="@+id/open_npc_high_normal_linear"
-            android:layout_width="match_parent"
+            android:id="@+id/open_npc_high_linear"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/open_npc_line2"></LinearLayout>
+
+        <View
+            android:id="@+id/open_npc_line3"
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/colorBlueishGreen"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/open_npc_high_linear" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="16dp"
+            android:orientation="vertical"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/open_npc_line3"></LinearLayout>
 
 
     </android.support.constraint.ConstraintLayout>
