Further development of OpenNpcActivity

--- a/app/src/main/res/layout/activity_open_npc.xml
+++ b/app/src/main/res/layout/activity_open_npc.xml
@@ -14,6 +14,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:isScrollContainer="true"
+        android:scrollbars="vertical"
         tools:context="me.kerooker.rpgcharactergenerator.me.kerooker.generatednpcs.OpenNpcActivity">
 
         <TextView
@@ -56,6 +58,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
+            android:contentDescription="@string/npc_image"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/open_npc_line1"
@@ -98,15 +101,43 @@
             app:layout_constraintTop_toBottomOf="@+id/open_npc_high_linear" />
 
         <LinearLayout
+            android:id="@+id/open_npc_normal_linear"
             android:layout_width="0dp"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:orientation="vertical"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/open_npc_line3"></LinearLayout>
+
+        <View
+            android:id="@+id/open_npc_line4"
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/colorBlueishGreen"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/open_npc_normal_linear" />
+
+        <LinearLayout
+            android:id="@+id/open_npc_low_lowest_linear"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="16dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/open_npc_line4"></LinearLayout>
 
 
     </android.support.constraint.ConstraintLayout>
