--- a/app/src/main/res/layout/activity_open_npc.xml
+++ b/app/src/main/res/layout/activity_open_npc.xml
@@ -35,7 +35,7 @@
             android:inputType="none"
             android:text="Title Dummy Text"
             android:textAlignment="center"
-            android:textColor="@android:style/Theme.Black"
+            android:textColor="@color/common_google_signin_btn_text_light_default"
             android:textSize="22sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
