--- a/app/src/main/res/layout/box_npcs.xml
+++ b/app/src/main/res/layout/box_npcs.xml
@@ -12,31 +12,33 @@
         android:id="@+id/npcImage"
         android:layout_width="88dp"
         android:layout_height="88dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:contentDescription="@string/npc_image"
-        android:scaleType="fitXY"
+        android:scaleType="centerInside"
         app:layout_constraintBottom_toBottomOf="@+id/layoutInformation"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="@+id/layoutInformation"
+        app:layout_constraintVertical_bias="0.5"
         app:srcCompat="@drawable/camera" />
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/layoutInformation"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:maxWidth="280dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/npcImage"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp">
+        app:layout_constraintVertical_bias="0.5">
 
         <TextView
             android:id="@+id/top_priority"
