--- a/app/src/main/res/values/main_screen.xml
+++ b/app/src/main/res/values/main_screen.xml
@@ -7,4 +7,5 @@
     <string name="gender">Gender:</string>
     <string name="race">Race:</string>
     <string name="subrace">Subrace:</string>
+    <string name="my_npcs">My NPCs</string>
 </resources>
