--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -187,6 +187,19 @@
             tools:layout_constraintLeft_creator="1"
             tools:layout_constraintRight_creator="1" />
 
+        <Button
+            android:id="@+id/main_screen_my_npcs"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="16dp"
+            android:text="@string/my_npcs"
+            app:layout_constraintEnd_toEndOf="@+id/main_screen_generate_button"
+            app:layout_constraintStart_toStartOf="@+id/main_screen_generate_button"
+            app:layout_constraintTop_toBottomOf="@+id/main_screen_generate_button" />
+
     </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
