--- a/app/src/main/res/layout/activity_open_npc.xml
+++ b/app/src/main/res/layout/activity_open_npc.xml
@@ -64,6 +64,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:contentDescription="@string/npc_image"
+            android:scaleType="fitCenter"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/open_npc_line1"
