--- a/app/src/main/res/layout/activity_open_npc.xml
+++ b/app/src/main/res/layout/activity_open_npc.xml
@@ -93,7 +93,7 @@
             android:orientation="vertical"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/open_npc_line2"></LinearLayout>
+            app:layout_constraintTop_toBottomOf="@+id/open_npc_line2" />
 
         <View
             android:id="@+id/open_npc_line3"
@@ -118,7 +118,7 @@
             android:orientation="vertical"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/open_npc_line3"></LinearLayout>
+            app:layout_constraintTop_toBottomOf="@+id/open_npc_line3" />
 
         <View
             android:id="@+id/open_npc_line4"
@@ -143,7 +143,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/open_npc_line4"></LinearLayout>
+            app:layout_constraintTop_toBottomOf="@+id/open_npc_line4" />
 
 
     </android.support.constraint.ConstraintLayout>
