--- a/app/src/main/res/layout/box_npcs.xml
+++ b/app/src/main/res/layout/box_npcs.xml
@@ -17,7 +17,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:contentDescription="@string/npc_image"
-        android:scaleType="centerInside"
+        android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="@+id/layoutInformation"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="@+id/layoutInformation"
