--- a/app/src/main/res/layout/randomnpc_element_list_view.xml
+++ b/app/src/main/res/layout/randomnpc_element_list_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -7,35 +7,32 @@
 
     <LinearLayout
         android:id="@+id/list"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="vertical" />
 
-    <ImageButton
-        android:id="@+id/add_item_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginTop="8dp"
-        android:background="@null"
-        app:layout_constraintEnd_toStartOf="@id/add_item_text"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@id/list"
-        app:layout_constraintTop_toBottomOf="@id/list"
-        app:srcCompat="@drawable/ic_add_circle_primary_color_24dp" />
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/add_item_text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="@string/random_npc_add_item"
-        app:layout_constraintBottom_toBottomOf="@+id/add_item_button"
-        app:layout_constraintEnd_toEndOf="@+id/list"
-        app:layout_constraintStart_toEndOf="@+id/add_item_button"
-        app:layout_constraintTop_toTopOf="@id/add_item_button" />
+        <ImageButton
+            android:id="@+id/add_item_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@null"
+            app:srcCompat="@drawable/ic_add_circle_primary_color_24dp" />
+
+        <TextView
+            android:id="@+id/add_item_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="8dp"
+            android:text="@string/random_npc_add_item" />
+    </LinearLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
