--- a/app/src/main/res/layout/randomnpc_element_view.xml
+++ b/app/src/main/res/layout/randomnpc_element_view.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/random_field_text_layout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="4dp"
-        app:layout_constraintEnd_toStartOf="@+id/random_field_dice"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_weight="1">
 
         <me.kerooker.rpgnpcgenerator.view.random.npc.ClearFocusEditText
             android:id="@+id/random_field_text"
@@ -27,10 +26,8 @@
         android:id="@+id/random_field_dice"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:src="@drawable/dice_192_192"
-        app:layout_constraintBottom_toBottomOf="@+id/random_field_text_layout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/random_field_text_layout"
-        app:layout_constraintVertical_bias="0.50" />
+        android:layout_gravity="center"
+        android:layout_weight="0"
+        android:src="@drawable/dice_192_192" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
