--- a/app/src/main/res/layout/randomnpc_element_view.xml
+++ b/app/src/main/res/layout/randomnpc_element_view.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    tools:parentTag="android.widget.LinearLayout">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/random_field_text_layout"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="4dp"
         android:layout_weight="1">
 
-        <me.kerooker.rpgnpcgenerator.view.random.npc.ClearFocusEditText
+        <me.kerooker.rpgnpcgenerator.view.text.ClearFocusEditText
             android:id="@+id/random_field_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -30,4 +29,4 @@
         android:layout_weight="0"
         android:src="@drawable/dice_192_192" />
 
-</LinearLayout>
+</merge>
