--- a/app/src/main/res/values-pt/random_npc.xml
+++ b/app/src/main/res/values-pt/random_npc.xml
@@ -16,7 +16,7 @@
     <string name="random_npc_personality_hint">Traço de Personalidade</string>
     <string name="random_npc_add_item">Adicionar Item</string>
     
-    <string name="randomize_all">Aleatorizar Tudo</string>
+    <string name="randomize_all">Tudo Aleatório</string>
     <string name="save">Salvar</string>
 
 
